@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2012-12-07 (SVN):
+    * mathlib.h: added original version of the VectorNegate() macro in
+      commented out form.
     * bspfile.c: fixed an old stupid error in the version error message.
 
 2012-11-23 (SVN):
